--- a/app/views/active/list_application.html.erb
+++ b/app/views/active/list_application.html.erb
@@ -1,4 +1,11 @@
 <script>
+  $(function () {
+    $('#menu_active').removeClass('on');
+    $('#menu_favorites').removeClass('on');
+    $('#menu_application').addClass('on');
+    $('#menu_mypage').removeClass('on');
+  });
+  
   function createToast(t) {
     switch (t) {
       case 'danger':
