--- a/app/views/add_information/add.html.erb
+++ b/app/views/add_information/add.html.erb
@@ -73,7 +73,7 @@ $(function(){
       <br/>
       
     <label for="bankName">계좌번호</label>
-    <input type="text" name = "accountNum" placeholder = "계좌번호"  class="frm_default" /><br/>
+    <input type="text" name = "accountNum" placeholder = "계좌번호" value="<%=current_user.accountNum%>" class="frm_default" /><br/>
    
    
    <label for="phone">핸드폰번호</label>
