--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -53,6 +53,29 @@ div, ul, li {display:inline-block;*display:inline;}
 .col-md-8 {float:left;width:66.6666%}
 .col-md-9 {float:left;width:75%}
 
+
+
+/*//////////intro//////*/
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat:800&display=swap');
+
+  .intro {padding-top:100px;}
+  .intro h3 {font-size:11pt;font-weight:bold;text-align:center;margin:50px 0 20px 0;font-family: 'Montserrat', sans-serif;}
+  .intro h3 a {color:#fff;}
+  .intro p {width:80%;border-radius:5px;padding:20px;margin:50px auto;line-height:180%;letter-spacing:-0.5pt;font-size:11pt;background:rgba(255,255,255,0.2);}
+  .intro .member {max-width:80%;}
+  .intro .btn_youtube,
+  .intro .btn_kakao {position:relative;float:left;width:50px;height:50px;}
+  .intro .btn_youtube {background:url('http://ndesign.co.kr/sharework/icon_youtube.png') center center no-repeat;background-size:30px auto;}
+  .intro .btn_kakao {background:url('http://ndesign.co.kr/sharework/icon_kakao.png') center center no-repeat;background-size:30px auto;}
+  .intro .btn_area {display:inline-block;*display:inline;margin:0 auto;}
+  
+/*//////////intro end //////*/  
+  
+  
+  
+  
+  
 /*form*/
 
 button {border-radius:0;-webkit-appearance:none}
@@ -66,6 +89,15 @@ input[type=submit] {-webkit-appearance:none;}
 
 .btn_gray {background:#f7f7f7;color:#aaa;border-radius:50px;}
 .btn_white{background:rgba(255,255,255,0.3);border-radius:50px;border:0;color:#fff;}
+
+
+.btn_bd_gray {border:1px solid #ddd;color:#8a8a8a;background:#fff;}
+
+
+a.btn_lg {position:relative;width:100%;float:left;}
+a.btn_bd_gray {color:#8a8a8a;}
+
+
 
 .frm_lg {padding:0 30px;height:50px;line-height:50px;}
 
@@ -86,7 +118,6 @@ input[type=submit] {-webkit-appearance:none;}
 
 #wrap {position:relative;width:100%;max-width:500px;margin:0 auto;background:#fff;text-align:left;
     padding-bottom:50px;min-height:800px}
-
 .info {font-size:10pt;}
 
 /*로그인*/
@@ -94,26 +125,32 @@ input[type=submit] {-webkit-appearance:none;}
 .index {background:#85d5d5 !important;text-align:center !important;color:#fff;padding:150px 0;}
 .index .logo {max-width:280px;margin:0 auto 10px auto;}
 
+.btn_login {position:relative !important;background:#97d3d4;border:0;color:#fff;line-height:50px;width:100% !important;}
 
-.form_wrap {position:relative;width:100%;padding:0;clear:both;}
+
+.form_wrap {position:relative;width:100%;padding:0;
+display:inline-block;*display:inline;}
+.mg-top-10 {margin-top:10px;}
 .form_mg {margin:80px auto;}
 .form_mg_30 {margin:30px auto;}
 
 .form_wrap h2 {margin:20px 0;}
 
-.form_wrap input::placeholder {color: #def0f0;}
+.form_wrap input::placeholder {color: #8a8a8a;}
   
-.field {position:relative;width:100%;}
-.field span {position:absolute;left:0;top:0;line-height:50px;width:50px;text-align:center;font-size:13pt;}
-.frm_fa {padding-left:50px;}
+.field {position:relative;width:100%;display:inline-block;*display:inline;}
+.field span {position:absolute;left:0;top:0;line-height:50px;width:50px;height:50px;text-align:center;font-size:13pt;}
 
-
-.frm_default {position:relative;border:0;border-bottom:1px solid #fff;background:transparent;width:100%;height:50px;line-height:50px;margin-bottom:8px;color:#fff !important;}
+.frm_default {position:relative;border:1px solid #ddd;color:#888;padding-left:10px;width:100%;height:50px;line-height:50px;margin-bottom:8px;}
 
 .form_wrap.gray .frm_default {border:1px solid #ddd;color:#888 !important;padding-left:10px;}
-.form_wrap.gray input::placeholder {color: #888;}
+input::placeholder {color: #888;}
   
-  .form_wrap.gray label {position:relative;width:100%;float:left;text-align:left;font-weight:500;color:#444;margin:10px 0 5px 0;}
+.frm_fa {padding-left:50px !important;}
+.rememberme {margin:5px 0 10px 0;color:#8a8a8a;font-size:11pt;text-align:left;}
+
+label.title {position:relative;width:100%;float:left;text-align:left;font-weight:500;color:#444;margin:10px 0 5px 0;}
+
   
 .label_email {
   position:relative;
@@ -141,12 +178,16 @@ textarea.frm_default {height:100px;}
 .sns_login {position:relative;float:left;width:100%;height:50px;line-height:50px;color:#fff;
 border:0;border-radius:3px;padding-left:30px ;
     margin-bottom:10px;color:#fff;}
-.sns_login.kakao {background:url('/img/icon_kakao.png') #f6df4b no-repeat 40px center;
+.sns_login.kakao {background:url('http://ndesign.co.kr/sharework/img/icon_kakao.png') #f6df4b no-repeat 40px center;
     color:#371f1f !important;background-size:25px auto;}
-.sns_login.naver {background:url('/img/icon_naver.png') #1ec900 no-repeat 40px center;
+.sns_login.naver {background:url('http://ndesign.co.kr/sharework/img/icon_naver.png') #1ec900 no-repeat 40px center;
     background-size:20px auto;color:#fff !important;}
-.sns_login.email {background:url('/img/icon_email.png') #fff no-repeat 40px center;
+.sns_login.email {background:url('http://ndesign.co.kr/sharework/img/icon_email.png') #fff no-repeat 40px center;
     background-size:20px auto;border:1px solid #ddd;color:#888; }
+
+#login_area {position:absolute;width:100%;display:inline-block;display:inline;left:0;bottom:50px;}
+#login_area a {border:1px solid #fff;padding:3px 10px;border-radius:5px;margin-left:5px;}
+
 
 #maparea {position:relative;width:100%;}
 
@@ -157,7 +198,7 @@ border:0;border-radius:3px;padding-left:30px ;
 #sch button {box-shadow:0px 3px 5px rgba(0,0,0,0.3);}
 
 
-#sch span {float:right;border:1px solid #91d0cd;background:#fff;width:45px;height:45px;line-height:45px;border-radius:3px;background:url('/img/icon_mylocation.png') #fff no-repeat center center;background-size:20px auto;}
+#sch span {float:right;border:1px solid #91d0cd;background:#fff;width:45px;height:45px;line-height:45px;border-radius:3px;background:url('http://ndesign.co.kr/sharework/img/icon_mylocation.png') #fff no-repeat center center;background-size:20px auto;}
 
 
 /*[업주] 업체검색*/
@@ -169,7 +210,7 @@ float:right;width:90px;font-weight:500;border-radius:3px;}
 #fav {position:absolute;top:65px;right:10px;width:45px}
 
 .btn_fav2 {border:1px solid #91d0cd;width:45px;height:45px;line-height:45px;border-radius:3px;
-background:url('/img/icon_fav_star.png') #fff no-repeat center center;background-size:20px auto;margin-bottom:10px;
+background:url('http://ndesign.co.kr/sharework/img/icon_fav_star.png') #fff no-repeat center center;background-size:20px auto;margin-bottom:10px;
 box-shadow:0px 3px 5px rgba(0,0,0,0.3);}
 
 
@@ -209,16 +250,16 @@ button.sort_on {background:#97d3d4;color:#fff;border:1px solid #97d3d4}
 .work_list .info .title span {margin-left:8px;font-weight:400;font-size:10pt;color:#8a8a8a}
 
 .work_list .info .title span.loc:before {position:absolute;content:"|";left:0;top:-1px;}
-.work_list .info .title span.loc {position:relative;background:url('/img/icon_location.png') 12px center no-repeat;background-size:10px auto;padding-left:27px;}
+.work_list .info .title span.loc {position:relative;background:url('http://ndesign.co.kr/sharework/img/icon_location.png') 12px center no-repeat;background-size:10px auto;padding-left:27px;}
 
 a.tag {color:#40ada7;padding:0 3px;}    
 a.tag:hover {background:#e9f7ff;border-radius:3px;}    
 
 .work_list .info2 {position:relative;width:100%;padding:10px 0 0 0;margin:0px 0 0 75px;}
 .work_list .info2 li {padding:0 0 0 25px;margin:0;width:100%;list-style:none;display:inline-block;*display:inline;color:#8a8a8a;font-size:10pt;}
-.work_list .info2 li:first-child {background:url('/img/icon_cal.png') no-repeat left center;background-size:15px auto;}
-.work_list .info2 li:nth-child(2) {background:url('/img/icon_time.png') no-repeat left center;background-size:15px auto;}
-.work_list .info2 li:nth-child(3) {background:url('/img/icon_pay.png') no-repeat left center;background-size:15px auto;}
+.work_list .info2 li:first-child {background:url('http://ndesign.co.kr/sharework/img/icon_cal.png') no-repeat left center;background-size:15px auto;}
+.work_list .info2 li:nth-child(2) {background:url('http://ndesign.co.kr/sharework/img/icon_time.png') no-repeat left center;background-size:15px auto;}
+.work_list .info2 li:nth-child(3) {background:url('http://ndesign.co.kr/sharework/img/icon_pay.png') no-repeat left center;background-size:15px auto;}
 
 .work_list .fa-star {z-index:999;}
 
@@ -251,7 +292,7 @@ font-weight:500;padding:10px 20px 10px 30px;border-radius:50px;}
 .st_info .st_top .title span {margin-left:8px;font-weight:400;font-size:10pt;color:#8a8a8a}
 
 .st_info .st_top .title span.loc:before {position:absolute;content:"|";left:0;top:-1px;}
-.st_info .st_top .title span.loc {position:relative;background:url('/img/icon_location.png') 12px center no-repeat;background-size:10px auto;padding-left:27px;}
+.st_info .st_top .title span.loc {position:relative;background:url('http://ndesign.co.kr/sharework/img/icon_location.png') 12px center no-repeat;background-size:10px auto;padding-left:27px;}
 
 .st_info .st_top .icon_fav {top:15px;right:15px;}
 
@@ -279,25 +320,27 @@ font-weight:500;padding:10px 20px 10px 30px;border-radius:50px;}
 #menu ul {position:relative;width:100%;max-width:500px;margin:0 auto;padding:0;}
 
 #menu ul li {float:left;width:25%;height:55px;}
-#menu ul li:first-child {background:url('/img/icon_menu_home.png') no-repeat center center;background-size:30px auto;}
-#menu ul li:nth-child(2) {background:url('/img/icon_menu_fav.png') no-repeat center center;background-size:30px auto;}
+#menu ul li:first-child {background:url('http://ndesign.co.kr/sharework/img/icon_menu_home.png') no-repeat center center;background-size:30px auto;}
+#menu ul li:nth-child(2) {background:url('http://ndesign.co.kr/sharework/img/icon_menu_fav.png') no-repeat center center;background-size:30px auto;}
+
+
 
 
 /*
 #menu ul li:nth-child(3) {}
-#menu ul li:nth-child(3) div {width:90px;height:90px;border-radius:50%;background:url('/img/icon_menu_location.png') #82d7d2 no-repeat center center;
+#menu ul li:nth-child(3) div {width:90px;height:90px;border-radius:50%;background:url('http://ndesign.co.kr/sharework/img/icon_menu_location.png') #82d7d2 no-repeat center center;
 background-size:30px auto;margin-top:-30px;}
 */
 
-#menu ul li:nth-child(3) {background:url('/img/icon_menu_list.png') no-repeat center center;background-size:30px auto;}
-#menu ul li:nth-child(4) {background:url('/img/icon_menu_mypage.png') no-repeat center center;background-size:30px auto;}
+#menu ul li:nth-child(3) {background:url('http://ndesign.co.kr/sharework/img/icon_menu_list.png') no-repeat center center;background-size:30px auto;}
+#menu ul li:nth-child(4) {background:url('http://ndesign.co.kr/sharework/img/icon_menu_mypage.png') no-repeat center center;background-size:30px auto;}
 
-#menu ul li:first-child.on {background:url('/img/icon_menu_home_on.png') no-repeat center center;background-size:30px auto;}
+#menu ul li:first-child.on {background:url('http://ndesign.co.kr/sharework/img/icon_menu_home_on.png') no-repeat center center;background-size:30px auto;}
 
-#menu ul li:nth-child(2).on {background:url('/img/icon_menu_fav_on.png') no-repeat center center;background-size:30px auto;}
+#menu ul li:nth-child(2).on {background:url('http://ndesign.co.kr/sharework/img/icon_menu_fav_on.png') no-repeat center center;background-size:30px auto;}
 
-#menu ul li:nth-child(3).on {background:url('/img/icon_menu_list_on.png') no-repeat center center;background-size:30px auto;}
-#menu ul li:nth-child(4).on {background:url('/img/icon_menu_mypage.png') no-repeat center center;background-size:30px auto;}
+#menu ul li:nth-child(3).on {background:url('http://ndesign.co.kr/sharework/img/icon_menu_list_on.png') no-repeat center center;background-size:30px auto;}
+#menu ul li:nth-child(4).on {background:url('http://ndesign.co.kr/sharework/img/icon_menu_mypage_on.png') no-repeat center center;background-size:30px auto;}
 
 
 
@@ -307,8 +350,8 @@ background-size:30px auto;margin-top:-30px;}
 #status {position:relative;float:left;width:100%;margin:0;padding:20px;}
 #status li {float:left;width:50%;text-align:right;font-size:13pt;font-weight:500;padding:15px;margin:0;color:#333;}
 #status li span {color:#83d7d3;font-size:11pt;clear:both;}
-#status li:first-child {background:url('/img/status_icon1.png') no-repeat 10px center;background-size:35px auto;border-right:1px solid #ddd;}
-#status li:nth-child(2) {background:url('/img/status_icon2.png') no-repeat 10px center;background-size:35px auto;}
+#status li:first-child {background:url('http://ndesign.co.kr/sharework/img/status_icon1.png') no-repeat 10px center;background-size:35px auto;border-right:1px solid #ddd;}
+#status li:nth-child(2) {background:url('http://ndesign.co.kr/sharework/img/status_icon2.png') no-repeat 10px center;background-size:35px auto;}
 
 
 ul.tabs {position:relative;width: 100%;color:#8a8a8a; margin: 0;padding: 0;}
@@ -333,9 +376,20 @@ ul.tabs li.active div {background:#82d7d2;}
 #profile a i {color:#fff;}
 
 .name {font-size:15pt;}
-.certi {border:1px solid #fffa7f;color:#fffa7f;padding:1px 5px;border-radius:20px;}
+.certi {border:1px solid #fffa7f;color:#fffa7f;padding:1px 5px;border-radius:20px;font-size:9pt;letter-spacing:-0.5pt;}
 
-.btn_modify {border:0;position:absolute;right:20px;top:40px;width:30px;height:30px;background:url('/img/icon_setting.png') no-repeat center center; background-size:30px auto;}
+.certi_sns {border:0;color:#fff;padding:1px 6px;border-radius:20px;font-size:9pt;letter-spacing:-0.5pt;}
+
+.certi_sns.naver {background:#5ecb50;border:1px solid #5ecb50;border:1px solid #55c347;}
+.certi_sns.kakao {background:#ffe812;color:#381e1f;}
+
+.user_info {position:relative;width:100%;padding:0;margin:10px 0 0 0 ;}
+.user_info li {width:100%;padding:0;margin:0;}
+.sm_notice {color:#d2eeee;font-size:10pt;}
+
+
+
+.btn_modify {border:0;position:absolute;right:20px;top:40px;width:30px;height:30px;background:url('http://ndesign.co.kr/sharework/img/icon_setting.png') no-repeat center center; background-size:30px auto;}
 
 #profile  .btn_area {position:absolute;top:0;right:0;}
 #profile .btn_area span {border:1px solid #fff;border-radius:10px;}
@@ -350,7 +404,7 @@ ul.tabs li.active div {background:#82d7d2;}
 #list_menu > ul > li:nth-child(2) {height:auto;}    
     
     
-#list_menu li.arrow {background:url('/img/icon_arrow.png') no-repeat 95% center;background-size:10px auto;}
+#list_menu li.arrow {background:url('http://ndesign.co.kr/sharework/img/icon_arrow.png') no-repeat 95% center;background-size:10px auto;}
 
 #submenu {position:relative;float:left;width:100%;max-width:100%;padding:0;margin:15px 0;line-height:30px;}
 #submenu li {position:relative;width:100%;list-style:none;margin:0;padding:0;line-height:35px;color:#666;font-weight:400;}
@@ -365,6 +419,8 @@ ul.tabs li.active div {background:#82d7d2;}
 #create_job {border-radius:5px;background:#004eb7;width:100%;height:50px;line-height:50px;border:0;color:#fff;font-weight:500;font-size:12pt;margin-top:10px;}
 #create_job i {margin-right:10px;}
 
+.bs_profile .fas.fa-chevron-down {background:rgba(255,255,255,0.2);width:25px;height:25px;
+padding:3px;text-align:center;border-radius:50px !important}
 
 /*업주 - 공고 상세보기 */
 .ap_wrap {position:relative;width:100%;background:#f7f7f7;text-align:center;}
@@ -396,3 +452,235 @@ ul.tabs li.active div {background:#82d7d2;}
 
 #alert-success {color:#97d3d4}
 #alert-danger {color:#e0433f;}
+
+
+
+.modal-open {
+  overflow: hidden;
+}
+
+.modal-open .modal {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1050;
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  outline: 0;
+}
+
+.modal-dialog {
+  position: relative;
+  width: auto;
+  margin: 0.5rem;
+  pointer-events: none;
+}
+
+.modal.fade .modal-dialog {
+  transition: -webkit-transform 0.3s ease-out;
+  transition: transform 0.3s ease-out;
+  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
+  -webkit-transform: translate(0, -50px);
+  transform: translate(0, -50px);
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .modal.fade .modal-dialog {
+    transition: none;
+  }
+}
+
+.modal.show .modal-dialog {
+  -webkit-transform: none;
+  transform: none;
+}
+
+.modal-dialog-scrollable {
+  display: -ms-flexbox;
+  display: flex;
+  max-height: calc(100% - 1rem);
+}
+
+.modal-dialog-scrollable .modal-content {
+  max-height: calc(100vh - 1rem);
+  overflow: hidden;
+}
+
+.modal-dialog-scrollable .modal-header,
+.modal-dialog-scrollable .modal-footer {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+}
+
+.modal-dialog-scrollable .modal-body {
+  overflow-y: auto;
+}
+
+.modal-dialog-centered {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  min-height: calc(100% - 1rem);
+}
+
+.modal-dialog-centered::before {
+  display: block;
+  height: calc(100vh - 1rem);
+  content: "";
+}
+
+.modal-dialog-centered.modal-dialog-scrollable {
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-pack: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.modal-dialog-centered.modal-dialog-scrollable .modal-content {
+  max-height: none;
+}
+
+.modal-dialog-centered.modal-dialog-scrollable::before {
+  content: none;
+}
+
+.modal-content {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+  outline: 0;
+}
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1040;
+  width: 100vw;
+  height: 100vh;
+  background-color: #000;
+}
+
+.modal-backdrop.fade {
+  opacity: 0;
+}
+
+.modal-backdrop.show {
+  opacity: 0.5;
+}
+
+.modal-header {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 1rem 1rem;
+  border-bottom: 1px solid #dee2e6;
+  border-top-left-radius: 0.3rem;
+  border-top-right-radius: 0.3rem;
+  text-align:center;
+}
+
+.modal-header .close {
+  padding: 1rem 1rem;
+  margin: -1rem -1rem -1rem auto;
+  border:0;
+  background:transparent;
+  font-size:15pt;
+}
+
+.modal-title {
+  margin-bottom: 0;
+  line-height: 1.5;
+  text-align:center;
+}
+
+.modal-body {
+  position: relative;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1rem;
+}
+
+.modal-footer {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  padding: 1rem;
+  border-top: 1px solid #dee2e6;
+  border-bottom-right-radius: 0.3rem;
+  border-bottom-left-radius: 0.3rem;
+}
+
+.modal-footer > :not(:first-child) {
+  margin-left: .25rem;
+}
+
+.modal-footer > :not(:last-child) {
+  margin-right: .25rem;
+}
+
+.modal-scrollbar-measure {
+  position: absolute;
+  top: -9999px;
+  width: 50px;
+  height: 50px;
+  overflow: scroll;
+}
+
+@media (min-width: 576px) {
+  .modal-dialog {
+    max-width: 500px;
+    margin: 1.75rem auto;
+  }
+  .modal-dialog-scrollable {
+    max-height: calc(100% - 3.5rem);
+  }
+  .modal-dialog-scrollable .modal-content {
+    max-height: calc(100vh - 3.5rem);
+  }
+  .modal-dialog-centered {
+    min-height: calc(100% - 3.5rem);
+  }
+  .modal-dialog-centered::before {
+    height: calc(100vh - 3.5rem);
+  }
+  .modal-sm {
+    max-width: 300px;
+  }
+}
+
+@media (min-width: 992px) {
+  .modal-lg,
+  .modal-xl {
+    max-width: 800px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .modal-xl {
+    max-width: 1140px;
+  }
+}
