--- a/app/views/active/create_favorites.html.erb
+++ b/app/views/active/create_favorites.html.erb
@@ -1,5 +1,211 @@
-<div id="wrap">
-  <div id="top_title2"><i class="fas fa-chevron-left" onClick="history.back();"></i>즐겨찾기</div>
-  
+<!--<html>
+  <head>
+    <style>
+       /* Set the size of the div element that contains the map */
+      #map {
+        height: 1000px;  /* The height is 400 pixels */
+        width: 100%;  /* The width is the width of the web page */
+       }
+       
+       #btn_submit {
+             position:fixed;background:#4FC9DE;height:55px;left:0;bottom:0;
+        text-align:center;border-top:1px solid #ddd;max-width:500px;margin:0 auto;bottom: 0; left: 0; right: 0;
+       }
+    </style>
+    <script>
+      $(function(){
+        $('#menu').remove();
+      });
+    </script>
+  </head>
+  <body>
+    <div id="wrap" style=" min-height: 700px;">
+      <div id="map"></div>
       
+      <form method="post" name="writeform" action="/active/createFavorites"> 
+        <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+        <input type="hidden" id="y" name="y" value="">
+        <input type="hidden" id="x" name="x" value="">
+        <div id="btn_submit" style="cursor: pointer;">저장</div>
+      </form> 
+    </div>
+    
+    <script>
+      var map;
+      var markers = [];
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 12,
+          mapTypeId: google.maps.MapTypeId.ROADMAP,
+          panControl: true,
+          zoomControl: false,
+          mapTypeControl: false,
+          scaleControl: false,
+          streetViewControl: false,
+          overviewMapControl: false
+        });
+        infoWindow = new google.maps.InfoWindow;
+
+        // Try HTML5 geolocation.
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+
+            //infoWindow.setPosition(pos);
+            //infoWindow.setContent('Location found.');
+            //infoWindow.open(map);
+            var image = 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png';
+            var marker = new google.maps.Marker({position: pos, map: map, icon: image});
+            map.setCenter(pos);
+          }, function() {
+            handleLocationError(true, infoWindow, map.getCenter());
+          });
+        } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, infoWindow, map.getCenter());
+        }
+        
+        google.maps.event.addListener(map, 'click', function(event) {
+          deleteMarkers();
+          placeMarker(event.latLng);
+          
+          var y = event.latLng.lat();
+          var x = event.latLng.lng();
+          
+          var f = document.writeform; 
+          f.y.value = y;
+          f.x.value = x;
+        });
+      }
+      
+      function placeMarker(location) {
+        var marker = new google.maps.Marker({
+            position: location, 
+            map: map
+        });
+        
+        markers.push(marker);
+        map.setCenter(location);
+      }
+      
+      function deleteMarkers() {
+        clearMarkers();
+        markers = [];
+      }
+      
+      function clearMarkers() {
+        setMapOnAll(null);
+      }
+      
+      function setMapOnAll(map) {
+        for (var i = 0; i < markers.length; i++) {
+          markers[i].setMap(map);
+        }
+      }
+      
+      $(function(){
+        $('#btn_submit').on('click', function(){
+          if($('#y').val() == "" && $('#x').val() == "") {
+            alert("위치를 지정해주세요.");
+            return;
+          }
+          
+          var f = document.writeform; 
+          f.submit(); 
+        });
+      });
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7hFvqWN9sgQerWvWN7UTkRYI2yfKtlnk&callback=initMap">
+    </script>
+    
+    
+  </body>
+</html>-->
+
+<script>
+  $(function () {
+    $('#menu_active').removeClass('on');
+    $('#menu_favorites').addClass('on');
+    $('#menu_application').removeClass('on');
+    $('#menu_mypage').removeClass('on');
+  });
+  
+  $(function () {
+    $('.btn_fav_apply').on('click', function () {
+      var id = $(this).data('id');
+      location.href = "/active/create_application?id=" + id;
+    });
+  });
+</script>
+
+<style>
+
+.st_fav {width:90% !important;margin:15px 5% 0px 5% !important;float:none;border:1px solid #95d5d1;border-radius:10px;
+box-shadow: 3px 3px 3px #ddf4f3;padding-bottom:0 !important;background:#fff;}
+
+.posting_list {position:relative;float:left;width:100%;padding:0;margin:10px 0;}
+
+.posting_list li {position:relative;width:100%;padding:0;margin:0;font-size:9.5pt;color:#8a8a8a;padding:10px 0;
+border-top:1px solid #ddd;padding-left:10px;}
+.posting_list li:first-child {border-top:1px solid #97d3d4}
+.posting_list li b {color:#000;font-size:11pt;font-weight:500;}
+.posting_list .btn_fav_apply {position:absolute;top:13px;right:0;
+background:linear-gradient( to right, #82d7d2, #77c2ec);color:#fff;font-size:12pt;
+font-weight:500;padding:7px 15px;width:110px;border-radius:50px;font-size:10.5pt;text-align:center;}
+
+.done {background:#fff !important;border:1px solid #dfdfdf;color:#c4c4c4 !important;}
+
+.fas.fa-star {color:#ffd900}
+
+.st_fav .title {line-height:130%;}
+.st_fav .title span {margin-left:0 !important;}
+</style>
+
+
+
+<div id="wrap" class="st_info" style="background:#f7f7f7;">
+  <div id="top_title2">업체 즐겨찾기</div>
+  
+  <% @albafav.each do |albafav| %>
+    <div class="st_top st_fav">
+        <div class="icon_fav"><i class="fas fa-star"></i></div>
+        <div class="img"><img src="http://cdnimage.ebn.co.kr/news/201710/news_1509339728_915222_main1.jpg"></div>
+        <div class="info">
+            <div class="title">
+              <%= albafav.bs_name %><br>
+              <span><%= albafav.address %></span>
+              <span class="loc">200m</span>
+            </div>
+        </div>
+        
+        <% @job.each do |job| %>
+          <% if job != nil %>
+            <% if job.bussiness_id.to_i == albafav.bussiness_id.to_i %>
+              <ul class="posting_list">
+              <li>
+                <% @tag.each do |tag| %>
+                  <% if tag.job_id.to_i == job.id.to_i %>
+                  <b>#<%= tag.sort %></b>
+                  <% end %>
+                <% end %>
+                <br><%= job.date %> 15:00 ~ 18:00 | 시급 <%= job.pay %>원 <a href="#" class="btn_fav_apply" data-id=<%= job.id %>>바로지원하기</a></li>
+              </ul>
+            <% end %>
+            
+          <% end %>
+        <% end %>
+        
+    </div>
+  <% end %>
+       
+    
+     
+     
+     
+     
 </div>
