--- a/app/views/active/deadline_application.html.erb
+++ b/app/views/active/deadline_application.html.erb
@@ -31,6 +31,19 @@
         //window.location.reload();
         $(".btn_apply").load(window.location.href + " .btn_apply");
       });
+      
+      $('#bussiness-fav').on('click', function () {
+        var id = $(this).data('id');
+        
+        $.post('/bussiness/add_bussiness_fav', {bussiness_id: id}, 
+        function(returnedData){
+            $("#bussiness-fav").load(window.location.href + " #bussiness-fav");
+        }).fail(function(){
+          alert('error');
+        });
+      });
+      
+      
     });
 </script>
 
@@ -41,7 +54,13 @@
   
    <!--업체정보 상단-->
     <div class="st_top">
-        <div class="icon_fav"><i class="far fa-star"></i></div>
+        <div class="icon_fav">
+          <% if @albafav == nil %>
+            <i class="far fa-star" id="bussiness-fav" data-id=<%= @bussiness.id %>></i>
+            <% elsif @albafav != nil %>
+              <i class="fas fa-star" id="bussiness-fav" data-id=<%= @bussiness.id %> style="color: #ffd200"></i>
+          <% end %>
+        </div>
         
         <div class="img"><img src="http://cdnimage.ebn.co.kr/news/201710/news_1509339728_915222_main1.jpg"></div>
        
@@ -97,7 +116,7 @@
           
           <tr>
             <th colspan="2">위치보기
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4742.758245057024!2d127.02914502952132!3d37.498215433731964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdbf9af292beff3c!2z6rCV64Ko!5e0!3m2!1sko!2skr!4v1568972348911!5m2!1sko!2skr" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4742.758245057024!2d126.811302831185!3d37.3362846985835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdbf9af292beff3c!2z6rCV64Ko!5e0!3m2!1sko!2skr!4v1568972348911!5m2!1sko!2skr" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </th>
           </tr>
     
@@ -120,3 +139,8 @@
 
 
 
+<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+</script>
+<script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7hFvqWN9sgQerWvWN7UTkRYI2yfKtlnk&callback=initMap&libraries=geometry,places&sensor=false">
+</script> 
