--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -7,9 +7,6 @@
   <%= link_to t(".sign_up"), new_registration_path(resource_name) %><br />
 <% end %>-->
 
-<!--<%#- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>-->
-<!--  <%#= link_to t(".forgot_your_password"), new_password_path(resource_name) %><br />-->
-<!--<%# end %>-->
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <%= link_to t('.didn_t_receive_confirmation_instructions'), new_confirmation_path(resource_name) %><br />
@@ -22,10 +19,10 @@
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
     <% if provider.to_s == "kakao" %>
-      <%= link_to t('.sign_in_with_provider', provider: OmniAuth::Utils.camelize(provider)), omniauth_authorize_path(resource_name, provider), class: "sns_login kakao" %><br />
+      <%= link_to t('카카오로 로그인', provider: OmniAuth::Utils.camelize(provider)), omniauth_authorize_path(resource_name, provider), class: "sns_login kakao" %><br />
     <% end %>
     <% if provider.to_s == "naver" %>
-      <%= link_to t('.sign_in_with_provider', provider: OmniAuth::Utils.camelize(provider)), omniauth_authorize_path(resource_name, provider), class: "sns_login naver" %><br />
+      <%= link_to t('네이버로 로그인', provider: OmniAuth::Utils.camelize(provider)), omniauth_authorize_path(resource_name, provider), class: "sns_login naver" %><br />
     <% end %>
     
   <% end %>
