--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,79 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ShareWorkD</title>
-    
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <script src="https://sdk.accountkit.com/en_US/sdk.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script> 
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="//rawgit.com/Soldier-B/jquery.toast/master/jquery.toast/jquery.toast.min.css" />
-<script src="//rawgit.com/Soldier-B/jquery.toast/master/jquery.toast/jquery.toast.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
-<script>
-  function createToast(t) {
-    switch (t) {
-      case 'success':
-        $.toast('<h4>성공!</h4> 토스트 생성에 성공했습니다. 닫아야 없어집니다.', {
-          //sticky: true,
-          duration: 2000,
-          type: 'success'
-        });
-        return;
-    }
-  }
-
-  $(document).ready(function() {
-    $.toast.config.align = 'center';
-    $.toast.config.width = 400;
-
-    $('button').click(function() {
-      createToast($(this).attr('class'));
-    });
-  });
-  
-  $(function(){
-    $('#menu_active').on('click', function(){
-      location.href = "/active/index1";
-    });
-    
-    $('#menu_favorites').on('click', function(){
-      location.href = "/active/create_favorites";
-    });
-    
-    $('#menu_geo').on('click', function(){
-      location.href = "/active/geo_list";
-    });
-    
-    $('#menu_application').on('click', function(){
-      location.href = "/active/list_application";
-    });
-    
-    $('#menu_mypage').on('click', function(){
-      location.href = "/mypage/main";
-    });
-  });
-
-</script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ShareWork</title>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-app.js"></script>
 
-<!--<link rel="stylesheet" href="/css/font-awesome.min.css">-->
-  <script src="https://kit.fontawesome.com/9f48ba518c.js"></script>
-  
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-analytics.js"></script>
     
+    <script src="https://sdk.accountkit.com/en_US/sdk.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>-->
+    <script src="https://kit.fontawesome.com/9f48ba518c.js"></script>
+     
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
+    <link rel="stylesheet" href="http://ndesign.co.kr/sharework/css/animate.css"/>
     
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
     
-    
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+   
+    <!--<link rel="stylesheet" href="//rawgit.com/Soldier-B/jquery.toast/master/jquery.toast/jquery.toast.min.css" />-->
+    <!--<script src="//rawgit.com/Soldier-B/jquery.toast/master/jquery.toast/jquery.toast.min.js"></script>-->
+
   </head>
 
 
@@ -120,5 +76,57 @@
         </div>
       <% end %>
     <% end %>
+    
+    
+    
+<script>
+
+/*
+  function createToast(t) {
+    switch (t) {
+      case 'success':
+        $.toast('<h4>성공!</h4> 토스트 생성에 성공했습니다. 닫아야 없어집니다.', {
+          //sticky: true,
+          duration: 2000,
+          type: 'success'
+        });
+        return;
+    }
+  }
+
+  $(document).ready(function() {
+    $.toast.config.align = 'center';
+    $.toast.config.width = 400;
+
+    $('button').click(function() {
+      createToast($(this).attr('class'));
+    });
+  });
+  
+  */
+  
+  $(function(){
+    $('#menu_active').on('click', function(){
+      location.href = "/active/index1";
+    });
+    
+    $('#menu_favorites').on('click', function(){
+      location.href = "/active/create_favorites";
+    });
+    
+    $('#menu_geo').on('click', function(){
+      location.href = "/active/geo_list";
+    });
+    
+    $('#menu_application').on('click', function(){
+      location.href = "/active/list_application";
+    });
+    
+    $('#menu_mypage').on('click', function(){
+      location.href = "/mypage/main";
+    });
+  });
+
+</script>
   </body>
 </html>
