--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,21 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
     <link rel="stylesheet" href="http://ndesign.co.kr/sharework/css/animate.css"/>
     
+    <!-- ax5ui -->
+    <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5core/master/dist/ax5core.min.js"></script>
+    <!-- ax5ui-toast -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ax5ui/ax5ui-toast/master/dist/ax5toast.css" />
+    <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5ui-toast/master/dist/ax5toast.min.js"></script>
+    <!-- ax5ui-modal -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ax5ui/ax5ui-modal/master/dist/ax5modal.css" />
+    <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5ui-modal/master/dist/ax5modal.min.js"></script>
+    <!-- ax5ui-mask -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ax5ui/ax5ui-mask/master/dist/ax5mask.css" />
+    <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5ui-mask/master/dist/ax5mask.min.js"></script>
+    <!-- ax5ui-dialog -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ax5ui/ax5ui-dialog/master/dist/ax5dialog.css" />
+    <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5ui-dialog/master/dist/ax5dialog.min.js"></script>
+    
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     
@@ -55,6 +70,7 @@
                   <li id="menu_favorites"></li>
                   <li id="menu_application"></li>
                   <li id="menu_mypage"></li>
+                  <li></li>
                   <!--<li id="menu_geo"><div><a href="/active/geo_list"></a></div></li>-->
                   
 
@@ -69,6 +85,7 @@
                   <li id="menu_favorites"></li>
                   <li id="menu_application"></li>
                   <li id="menu_mypage"></li>
+                  <li></li>
                   <!--<li id="menu_geo"><div><a href="/active/geo_list"></a></div></li>-->
 
               </ul>
