--- a/app/views/bussiness/create_job.erb
+++ b/app/views/bussiness/create_job.erb
@@ -51,8 +51,14 @@
 </script>
 
 <script>
+    
+    
+
     var selectList = [];
     $(function(){
+        $('#test').on('click', function () {
+            
+        });
         
       $('#menu').remove();
       
@@ -63,11 +69,11 @@
            var id = $(this).data('id');
                
            if(selectList.length >= 5) {
-               alert('선택 초과');
+               eventToast('danger', '선택초과');
            } else {
                for(var i = 0; i < selectList.length; i++) {
                    if(selectList[i].id == id) {
-                       alert('이미 선택하였습니다.');
+                       eventToast('danger', '이미 선택하였습니다.');
                        return;
                    }
                }
@@ -117,10 +123,10 @@
             var f = document.writeForm;
             
             if(f.date.value == '') {
-                alert('날짜를 입력해주세요.');
+                eventToast('danger', '날짜를 입력해주세요.');
                 return;
             } else if(f.pay.value == '') {
-                alert('시급을 입력해주세요.');
+                eventToast('danger', '시급을 입력해주세요.');
                 return;
             } 
             
@@ -137,7 +143,7 @@
             f.time_end.value = endDate + ' ' + f.time_end_hh.value + ':' + f.time_end_mm.value + ':00';
             f.pay.value = RemoveComma(f.pay.value);
             if(f.pay.value < 8350) { //최저시급 체크
-                alert('시급 8,350원이상 입력해주세요.');
+                eventToast('danger', '시급 8,350원이상 입력해주세요.');
                 return;
             }
             
@@ -224,6 +230,7 @@
     		    return
     		} else {
     		    alert("현재시간 이후로 등록해주세요.");
+    		    
     		    nowTimeCheck();
     		}
         }
@@ -465,7 +472,6 @@
 
     
     <input type="button" value="저장" id="save" class="btn_apply">
-
 
 
 
