--- a/app/views/bussiness/location.erb
+++ b/app/views/bussiness/location.erb
@@ -125,7 +125,6 @@ function placesSearchCB(data, status, pagination) {
         // 정상적으로 검색이 완료됐으면
         // 검색 목록과 마커를 표출합니다
         displayPlaces(data);
-        debugger;
         place = data;
         // 페이지 번호를 표출합니다
         //displayPagination(pagination);
@@ -177,7 +176,7 @@ function displayPlaces(places) {
             });
             
             kakao.maps.event.addListener(marker, 'click', function() {
-                alert(marker);
+                //alert(marker);
             });
 
             kakao.maps.event.addListener(marker, 'mouseout', function() {
