--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -72,6 +72,12 @@
   <div id="map" style="width:300px;height:300px;margin-top:10px;display:none"></div>
 </div>-->
 
+
+<div class="agree_text">
+본인은 만 14세 이상이며, <a href="#">쉐어워크 이용약관</a>, <a href="#">개인정보 수집 및 이용</a> 내용을 
+확인하였으며 <b>동의합니다.</b>
+</div>
+
 <br/>
 <div class="actions">
   <%= f.submit "동의하고 가입하기" , class:"btn_apply", onclick: "return confirm('개인정보 동의');" %>
