--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <script src="https://kit.fontawesome.com/9f48ba518c.js"></script>
      
     <link rel="stylesheet" href="//code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
-    <link rel="stylesheet" href="http://ndesign.co.kr/sharework/css/animate.css"/>
+    <!--<link rel="stylesheet" href="http://ndesign.co.kr/sharework/css/animate.css"/>-->
     
     <!-- ax5ui -->
     <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5core/master/dist/ax5core.min.js"></script>
@@ -121,8 +121,9 @@
   });
   
   */
-  
   $(function(){
+  
+    
     $('#menu_active').on('click', function(){
       location.href = "/active/index1";
     });
@@ -145,5 +146,7 @@
   });
 
 </script>
+
+
   </body>
 </html>
