--- a/app/assets/stylesheets/---.css
+++ b/app/assets/stylesheets/---.css
@@ -253,8 +253,7 @@ input[type=submit] {
   margin: 0 auto;
   background: #fff;
   text-align: left;
-  padding-bottom: 50px;
-  min-height: 800px; }
+  padding-bottom: 50px;}
 
 .info {
   font-size: 10pt; }
@@ -264,10 +263,10 @@ input[type=submit] {
   background: #85d5d5 !important;
   text-align: center !important;
   color: #fff;
-  padding: 150px 0; }
+  padding: 130px 0; min-height:800px;}
 
 .index .logo {
-  max-width: 280px;
+  max-width: 250px;
   margin: 0 auto 10px auto; }
 
 .form_wrap {
