--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -115,13 +115,13 @@ a.btn_bd_gray {color:#8a8a8a;}
 #top_title2 i:hover {cursor:pointer;}
 
 #wrap {position:relative;width:100%;max-width:500px;margin:0 auto;background:#fff;text-align:left;
-    padding-bottom:50px;min-height:800px}
+    padding-bottom:50px;}
 .info {font-size:10pt;}
 
 /*로그인*/
 
-.index {background:#85d5d5 !important;text-align:center !important;color:#fff;padding:150px 0;}
-.index .logo {max-width:280px;margin:0 auto 10px auto;}
+.index {background:#85d5d5 !important;text-align:center !important;color:#fff;padding:130px 0 0 0;min-height:800px;}
+.index .logo {max-width:250px;margin:0 auto 10px auto;}
 
 .btn_login {position:relative !important;background:#97d3d4;border:0;color:#fff;line-height:50px;width:100% !important;}
 
@@ -146,7 +146,7 @@ width:100%;height:50px;line-height:50px;margin-bottom:8px;z-index:9;}
 
 .frm_fa {padding-left:50px;}
 
-.rememberme {margin:5px 0 10px 0;color:#8a8a8a;font-size:11pt;text-align:left;}
+.rememberme {margin:5px 0 10px 0;color:#8a8a8a;font-size:10pt;text-align:left;font-weight:normal;}
 
 label.title {position:relative;width:100%;float:left;text-align:left;font-weight:500;color:#444;margin:10px 0 5px 0;}
 
@@ -172,7 +172,8 @@ textarea.frm_default {height:100px;}
 .agree li:nth-child(2),
 .agree li:nth-child(3) {padding-left:20px;margin-top:5px;}
 
-#sns_login_wrap {position:relative;width:60%;margin:0 auto;display:inline-block;*display:inline;}
+#sns_login_wrap {position:relative;width:85%;max-width:350px;margin:0 auto;display:inline-block;*display:inline;
+font-size:10.5pt;}
 
 .sns_login {position:relative;float:left;width:100%;height:50px;line-height:50px;color:#fff;
 border:0;border-radius:3px;padding-left:30px ;
@@ -184,7 +185,7 @@ border:0;border-radius:3px;padding-left:30px ;
 .sns_login.email {background:url('http://ndesign.co.kr/sharework/img/icon_email.png') #fff no-repeat 40px center;
     background-size:20px auto;border:1px solid #ddd;color:#888; }
 
-#login_area {position:absolute;width:100%;display:inline-block;display:inline;left:0;bottom:50px;}
+#login_area {position:fixed;width:100%;display:inline-block;display:inline;left:0;bottom:50px;font-size:10.5pt;}
 #login_area a {border:1px solid #fff;padding:3px 10px;border-radius:5px;margin-left:5px;}
 
 
@@ -330,15 +331,14 @@ font-weight:500;padding:10px 20px 10px 30px;border-radius:50px;}
 background-size:30px auto;margin-top:-30px;}
 */
 
-#menu ul li:nth-child(3) {background:url('/img/icon_menu_list.png') no-repeat center center;background-size:30px auto;}
-#menu ul li:nth-child(4) {background:url('/img/icon_menu_mypage.png') no-repeat center center;background-size:30px auto;}
-#menu ul li:nth-child(5) {background:url('/img/icon_menu_alram.png') no-repeat center center;background-size:30px auto;}
+#menu ul li:nth-child(3) {background:url('http://ndesign.co.kr/sharework/img/icon_menu_list.png') no-repeat center center;background-size:30px auto;}
+#menu ul li:nth-child(4) {background:url('http://ndesign.co.kr/sharework/img/icon_menu_mypage.png') no-repeat center center;background-size:30px auto;}
+#menu ul li:nth-child(5) {background:url('http://ndesign.co.kr/sharework/img/icon_menu_alram.png') no-repeat center center;background-size:30px auto;}
 
 #menu ul li:first-child.on {background:url('http://ndesign.co.kr/sharework/img/icon_menu_home_on.png') no-repeat center center;background-size:30px auto;}
 #menu ul li:nth-child(2).on {background:url('http://ndesign.co.kr/sharework/img/icon_menu_fav_on.png') no-repeat center center;background-size:30px auto;}
 #menu ul li:nth-child(3).on {background:url('http://ndesign.co.kr/sharework/img/icon_menu_list_on.png') no-repeat center center;background-size:30px auto;}
 #menu ul li:nth-child(4).on {background:url('http://ndesign.co.kr/sharework/img/icon_menu_mypage_on.png') no-repeat center center;background-size:30px auto;}
-
 
 /*내역페이지*/
 #status {position:relative;float:left;width:100%;margin:0;padding:20px;}
