--- a/app/views/active/index1.html.erb
+++ b/app/views/active/index1.html.erb
@@ -14,7 +14,7 @@
       
       .map_wrap {position:relative;width:100%;height:500px;}
       #menu_wrap {
-        z-index: 10000;
+        z-index: 1000x0;
         position:absolute;
         top:0;
         margin-left: 450px;
@@ -50,7 +50,6 @@
               <!--즐찾버튼-->
               <div id="fav">
                 <div id="div-fav"> 
-                  <span class="favorites btn_plus" id="favorites_plus" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">+</span> <br />
                   <% if @favorites != nil %>
                     <% @count = 0 %>
                     <% while @count < @favorites.length %>
@@ -58,6 +57,7 @@
                       <% @count = @count + 1 %>
                     <% end %>
                   <% end %>
+                  <span class="favorites btn_plus" id="favorites_plus" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">+</span> <br />
                 </div>
               </div>
               <!--즐찾버튼-->
