--- a/app/views/bussiness/index.html.erb
+++ b/app/views/bussiness/index.html.erb
@@ -174,6 +174,7 @@
 
           <div id="tab3" class="tab_content">
             <div style="width: 100%; height: 100%;">
+            <% if @businessfav != nil %>
             <% @businessfav.each do |businessfav| %>
               <div class="application_list" data-id=<%= businessfav.id %> >
                 
@@ -196,6 +197,7 @@
                   </div>
   
               </div>
+            <% end %>
             <% end %>
             </div>
           </div>
