--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,12 +1,12 @@
 @charset "utf-8";
 
-@import url("/css/notosanskr.css");
-@import url("https://fonts.googleapis.com/css?family=Montserrat:800&display=swap");
+/* version 1.1.6
+2019-11-30배포*/
 
+@import url("/css/notosanskr.css");
 
 html {overflow-y:scroll}
-body {margin:0;padding:0;font-size:11pt;font-family:'Noto Sans KR', sans-serif;width:100%;height:100%;font-weight:400;
-background:#f9f9f9;text-align:center;}
+body {margin:0;padding:0;font-size:11pt;font-family:'Noto Sans KR', sans-serif;width:100%;height:100%;font-weight:400;background:#f9f9f9;text-align:center;}
 html, h1, h2, h3, h4, h5, h6, form, fieldset, img {margin:0;padding:0;border:0;font-family:'Noto Sans KR', sans-serif;}
 
 h1,h2,h3,h4,h5 {font-weight:500;}
@@ -181,7 +181,36 @@ border:0;border-radius:3px;padding-left:30px ;margin-bottom:10px;color:#fff;}
 #login_area a {border:1px solid #fff;padding:3px 10px;border-radius:5px;margin-left:5px;}
 
 #maparea {position:relative;width:100%;}
-
+      #map {
+        width:100%;
+        height:500px;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      
+      .map_wrap {position:relative;width:100%;height:500px;}
+      
+      #menu_wrap {
+        z-index: 1000;
+        position:absolute;
+        top:0;
+        margin-left: 450px;
+        margin-top: 10px;
+      }
+      
+      .favorites {
+        padding: 12px;
+        margin-bottom: 10px;
+        display: inline-block;
+        cursor: pointer;
+      }
+      
+      
+      
 /*검색창*/
 #sch {
   position: absolute;
